test/good/classes/inheritance08.px

class A def
    String x: "A"

class B(A) def
    constructor def
        this.x = "B"


func f() A def
    return B()

print f().x
