test/bad/classes/abstract04.px

class A def
    constructor() def
        skip

class B(A) def
    constructor() abstract

B()
